lex/y.output
Grammar

    0 $accept: Program $end

    1 Program: %empty
    2        | Function Program

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    4 Declarations: Declaration SEMICOLON Declarations
    5             | %empty

    6 Declaration: Idents COLON INTEGER
    7            | Idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    8 Ident: IDENT

    9 Idents: Ident
   10       | Ident COMMA Idents

   11 Statements: Statement SEMICOLON Statements
   12           | Statement SEMICOLON

   13 Statement: Var ASSIGN Expression
   14          | IF Bool-Expr THEN Statements ENDIF
   15          | IF Bool-Expr THEN Statements ELSE Statements ENDIF
   16          | WHILE Bool-Expr BEGINLOOP Statements ENDLOOP
   17          | DO BEGINLOOP Statements ENDLOOP WHILE Bool-Expr
   18          | FOR Var ASSIGN NUMBER SEMICOLON Bool-Expr SEMICOLON Var ASSIGN Expression BEGINLOOP Statements ENDLOOP
   19          | READ Vars
   20          | WRITE Vars
   21          | CONTINUE
   22          | RETURN Expression

   23 Bool-Expr: Relation-And-Expr OR Bool-Expr
   24          | Relation-And-Expr

   25 Relation-And-Expr: Relation-Expr-Inv AND Relation-And-Expr
   26                  | Relation-Expr-Inv

   27 Relation-Expr-Inv: NOT Relation-Expr-Inv
   28                  | Relation-Expr

   29 Relation-Expr: Expression Comp Expression
   30              | TRUE
   31              | FALSE
   32              | L_PAREN Bool-Expr R_PAREN

   33 Comp: EQ
   34     | NEQ
   35     | LT
   36     | LTE
   37     | GT
   38     | GTE

   39 Expression: Multiplicative-Expr ADD Expression
   40           | Multiplicative-Expr SUB Expression
   41           | Multiplicative-Expr

   42 Multiplicative-Expr: Term MULT Multiplicative-Expr
   43                    | Term DIV Multiplicative-Expr
   44                    | Term MOD Multiplicative-Expr
   45                    | Term

   46 Term: SUB Var
   47     | SUB NUMBER
   48     | SUB L_PAREN Expression R_PAREN
   49     | Var
   50     | NUMBER
   51     | L_PAREN Expression R_PAREN
   52     | Ident L_PAREN Expressions R_PAREN

   53 Expressions: Expression
   54            | Expression COMMA Expressions

   55 Vars: Var COMMA Vars
   56     | Var

   57 Var: Ident
   58    | Ident L_SQUARE_BRACKET Expression R_SQUARE_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 7 18 47 50
IDENT (259) 8
RETURN (260) 22
FUNCTION (261) 3
SEMICOLON (262) 3 4 11 12 18
BEGIN_PARAMS (263) 3
END_PARAMS (264) 3
BEGIN_LOCALS (265) 3
END_LOCALS (266) 3
BEGIN_BODY (267) 3
END_BODY (268) 3
BEGINLOOP (269) 16 17 18
ENDLOOP (270) 16 17 18
COLON (271) 6 7
INTEGER (272) 6 7
COMMA (273) 10 54 55
ARRAY (274) 7
L_SQUARE_BRACKET (275) 7 58
R_SQUARE_BRACKET (276) 7 58
L_PAREN (277) 32 48 51 52
R_PAREN (278) 32 48 51 52
IF (279) 14 15
ELSE (280) 15
THEN (281) 14 15
CONTINUE (282) 21
ENDIF (283) 14 15
OF (284) 7
READ (285) 19
WRITE (286) 20
DO (287) 17
WHILE (288) 16 17
FOR (289) 18
TRUE (290) 30
FALSE (291) 31
ASSIGN (292) 13 18
EQ (293) 33
NEQ (294) 34
LT (295) 35
LTE (296) 36
GT (297) 37
GTE (298) 38
ADD (299) 39
SUB (300) 40 46 47 48
MULT (301) 42
DIV (302) 43
MOD (303) 44
AND (304) 25
OR (305) 23
NOT (306) 27


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1 2, on right: 0 2
Function (54)
    on left: 3, on right: 2
Declarations (55)
    on left: 4 5, on right: 3 4
Declaration (56)
    on left: 6 7, on right: 4
Ident (57)
    on left: 8, on right: 3 9 10 52 57 58
Idents (58)
    on left: 9 10, on right: 6 7 10
Statements (59)
    on left: 11 12, on right: 3 11 14 15 16 17 18
Statement (60)
    on left: 13 14 15 16 17 18 19 20 21 22, on right: 11 12
Bool-Expr (61)
    on left: 23 24, on right: 14 15 16 17 18 23 32
Relation-And-Expr (62)
    on left: 25 26, on right: 23 24 25
Relation-Expr-Inv (63)
    on left: 27 28, on right: 25 26 27
Relation-Expr (64)
    on left: 29 30 31 32, on right: 28
Comp (65)
    on left: 33 34 35 36 37 38, on right: 29
Expression (66)
    on left: 39 40 41, on right: 13 18 22 29 39 40 48 51 53 54 58
Multiplicative-Expr (67)
    on left: 42 43 44 45, on right: 39 40 41 42 43 44
Term (68)
    on left: 46 47 48 49 50 51 52, on right: 42 43 44 45
Expressions (69)
    on left: 53 54, on right: 52 54
Vars (70)
    on left: 55 56, on right: 19 20 55
Var (71)
    on left: 57 58, on right: 13 18 46 49 55 56


State 0

    0 $accept: . Program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    Program   go to state 2
    Function  go to state 3


State 1

    3 Function: FUNCTION . Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENT  shift, and go to state 4

    Ident  go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    2 Program: Function . Program

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    Program   go to state 7
    Function  go to state 3


State 4

    8 Ident: IDENT .

    $default  reduce using rule 8 (Ident)


State 5

    3 Function: FUNCTION Ident . SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    SEMICOLON  shift, and go to state 8


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    2 Program: Function Program .

    $default  reduce using rule 2 (Program)


State 8

    3 Function: FUNCTION Ident SEMICOLON . BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_PARAMS  shift, and go to state 9


State 9

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS . Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENT  shift, and go to state 4

    $default  reduce using rule 5 (Declarations)

    Declarations  go to state 10
    Declaration   go to state 11
    Ident         go to state 12
    Idents        go to state 13


State 10

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations . END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    END_PARAMS  shift, and go to state 14


State 11

    4 Declarations: Declaration . SEMICOLON Declarations

    SEMICOLON  shift, and go to state 15


State 12

    9 Idents: Ident .
   10       | Ident . COMMA Idents

    COMMA  shift, and go to state 16

    $default  reduce using rule 9 (Idents)


State 13

    6 Declaration: Idents . COLON INTEGER
    7            | Idents . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    COLON  shift, and go to state 17


State 14

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS . BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_LOCALS  shift, and go to state 18


State 15

    4 Declarations: Declaration SEMICOLON . Declarations

    IDENT  shift, and go to state 4

    $default  reduce using rule 5 (Declarations)

    Declarations  go to state 19
    Declaration   go to state 11
    Ident         go to state 12
    Idents        go to state 13


State 16

   10 Idents: Ident COMMA . Idents

    IDENT  shift, and go to state 4

    Ident   go to state 12
    Idents  go to state 20


State 17

    6 Declaration: Idents COLON . INTEGER
    7            | Idents COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 21
    ARRAY    shift, and go to state 22


State 18

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS . Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENT  shift, and go to state 4

    $default  reduce using rule 5 (Declarations)

    Declarations  go to state 23
    Declaration   go to state 11
    Ident         go to state 12
    Idents        go to state 13


State 19

    4 Declarations: Declaration SEMICOLON Declarations .

    $default  reduce using rule 4 (Declarations)


State 20

   10 Idents: Ident COMMA Idents .

    $default  reduce using rule 10 (Idents)


State 21

    6 Declaration: Idents COLON INTEGER .

    $default  reduce using rule 6 (Declaration)


State 22

    7 Declaration: Idents COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 24


State 23

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations . END_LOCALS BEGIN_BODY Statements END_BODY

    END_LOCALS  shift, and go to state 25


State 24

    7 Declaration: Idents COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 26


State 25

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS . BEGIN_BODY Statements END_BODY

    BEGIN_BODY  shift, and go to state 27


State 26

    7 Declaration: Idents COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 28


State 27

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY . Statements END_BODY

    IDENT     shift, and go to state 4
    RETURN    shift, and go to state 29
    IF        shift, and go to state 30
    CONTINUE  shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    DO        shift, and go to state 34
    WHILE     shift, and go to state 35
    FOR       shift, and go to state 36

    Ident       go to state 37
    Statements  go to state 38
    Statement   go to state 39
    Var         go to state 40


State 28

    7 Declaration: Idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 41


State 29

   22 Statement: RETURN . Expression

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 43
    SUB      shift, and go to state 44

    Ident                go to state 45
    Expression           go to state 46
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Var                  go to state 49


State 30

   14 Statement: IF . Bool-Expr THEN Statements ENDIF
   15          | IF . Bool-Expr THEN Statements ELSE Statements ENDIF

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52
    SUB      shift, and go to state 44
    NOT      shift, and go to state 53

    Ident                go to state 45
    Bool-Expr            go to state 54
    Relation-And-Expr    go to state 55
    Relation-Expr-Inv    go to state 56
    Relation-Expr        go to state 57
    Expression           go to state 58
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Var                  go to state 49


State 31

   21 Statement: CONTINUE .

    $default  reduce using rule 21 (Statement)


State 32

   19 Statement: READ . Vars

    IDENT  shift, and go to state 4

    Ident  go to state 37
    Vars   go to state 59
    Var    go to state 60


State 33

   20 Statement: WRITE . Vars

    IDENT  shift, and go to state 4

    Ident  go to state 37
    Vars   go to state 61
    Var    go to state 60


State 34

   17 Statement: DO . BEGINLOOP Statements ENDLOOP WHILE Bool-Expr

    BEGINLOOP  shift, and go to state 62


State 35

   16 Statement: WHILE . Bool-Expr BEGINLOOP Statements ENDLOOP

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52
    SUB      shift, and go to state 44
    NOT      shift, and go to state 53

    Ident                go to state 45
    Bool-Expr            go to state 63
    Relation-And-Expr    go to state 55
    Relation-Expr-Inv    go to state 56
    Relation-Expr        go to state 57
    Expression           go to state 58
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Var                  go to state 49


State 36

   18 Statement: FOR . Var ASSIGN NUMBER SEMICOLON Bool-Expr SEMICOLON Var ASSIGN Expression BEGINLOOP Statements ENDLOOP

    IDENT  shift, and go to state 4

    Ident  go to state 37
    Var    go to state 64


State 37

   57 Var: Ident .
   58    | Ident . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 65

    $default  reduce using rule 57 (Var)


State 38

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements . END_BODY

    END_BODY  shift, and go to state 66


State 39

   11 Statements: Statement . SEMICOLON Statements
   12           | Statement . SEMICOLON

    SEMICOLON  shift, and go to state 67


State 40

   13 Statement: Var . ASSIGN Expression

    ASSIGN  shift, and go to state 68


State 41

    7 Declaration: Idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 69


State 42

   50 Term: NUMBER .

    $default  reduce using rule 50 (Term)


State 43

   51 Term: L_PAREN . Expression R_PAREN

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 43
    SUB      shift, and go to state 44

    Ident                go to state 45
    Expression           go to state 70
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Var                  go to state 49


State 44

   46 Term: SUB . Var
   47     | SUB . NUMBER
   48     | SUB . L_PAREN Expression R_PAREN

    NUMBER   shift, and go to state 71
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 72

    Ident  go to state 37
    Var    go to state 73


State 45

   52 Term: Ident . L_PAREN Expressions R_PAREN
   57 Var: Ident .
   58    | Ident . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 65
    L_PAREN           shift, and go to state 74

    $default  reduce using rule 57 (Var)


State 46

   22 Statement: RETURN Expression .

    $default  reduce using rule 22 (Statement)


State 47

   39 Expression: Multiplicative-Expr . ADD Expression
   40           | Multiplicative-Expr . SUB Expression
   41           | Multiplicative-Expr .

    ADD  shift, and go to state 75
    SUB  shift, and go to state 76

    $default  reduce using rule 41 (Expression)


State 48

   42 Multiplicative-Expr: Term . MULT Multiplicative-Expr
   43                    | Term . DIV Multiplicative-Expr
   44                    | Term . MOD Multiplicative-Expr
   45                    | Term .

    MULT  shift, and go to state 77
    DIV   shift, and go to state 78
    MOD   shift, and go to state 79

    $default  reduce using rule 45 (Multiplicative-Expr)


State 49

   49 Term: Var .

    $default  reduce using rule 49 (Term)


State 50

   32 Relation-Expr: L_PAREN . Bool-Expr R_PAREN
   51 Term: L_PAREN . Expression R_PAREN

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52
    SUB      shift, and go to state 44
    NOT      shift, and go to state 53

    Ident                go to state 45
    Bool-Expr            go to state 80
    Relation-And-Expr    go to state 55
    Relation-Expr-Inv    go to state 56
    Relation-Expr        go to state 57
    Expression           go to state 81
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Var                  go to state 49


State 51

   30 Relation-Expr: TRUE .

    $default  reduce using rule 30 (Relation-Expr)


State 52

   31 Relation-Expr: FALSE .

    $default  reduce using rule 31 (Relation-Expr)


State 53

   27 Relation-Expr-Inv: NOT . Relation-Expr-Inv

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52
    SUB      shift, and go to state 44
    NOT      shift, and go to state 53

    Ident                go to state 45
    Relation-Expr-Inv    go to state 82
    Relation-Expr        go to state 57
    Expression           go to state 58
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Var                  go to state 49


State 54

   14 Statement: IF Bool-Expr . THEN Statements ENDIF
   15          | IF Bool-Expr . THEN Statements ELSE Statements ENDIF

    THEN  shift, and go to state 83


State 55

   23 Bool-Expr: Relation-And-Expr . OR Bool-Expr
   24          | Relation-And-Expr .

    OR  shift, and go to state 84

    $default  reduce using rule 24 (Bool-Expr)


State 56

   25 Relation-And-Expr: Relation-Expr-Inv . AND Relation-And-Expr
   26                  | Relation-Expr-Inv .

    AND  shift, and go to state 85

    $default  reduce using rule 26 (Relation-And-Expr)


State 57

   28 Relation-Expr-Inv: Relation-Expr .

    $default  reduce using rule 28 (Relation-Expr-Inv)


State 58

   29 Relation-Expr: Expression . Comp Expression

    EQ   shift, and go to state 86
    NEQ  shift, and go to state 87
    LT   shift, and go to state 88
    LTE  shift, and go to state 89
    GT   shift, and go to state 90
    GTE  shift, and go to state 91

    Comp  go to state 92


State 59

   19 Statement: READ Vars .

    $default  reduce using rule 19 (Statement)


State 60

   55 Vars: Var . COMMA Vars
   56     | Var .

    COMMA  shift, and go to state 93

    $default  reduce using rule 56 (Vars)


State 61

   20 Statement: WRITE Vars .

    $default  reduce using rule 20 (Statement)


State 62

   17 Statement: DO BEGINLOOP . Statements ENDLOOP WHILE Bool-Expr

    IDENT     shift, and go to state 4
    RETURN    shift, and go to state 29
    IF        shift, and go to state 30
    CONTINUE  shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    DO        shift, and go to state 34
    WHILE     shift, and go to state 35
    FOR       shift, and go to state 36

    Ident       go to state 37
    Statements  go to state 94
    Statement   go to state 39
    Var         go to state 40


State 63

   16 Statement: WHILE Bool-Expr . BEGINLOOP Statements ENDLOOP

    BEGINLOOP  shift, and go to state 95


State 64

   18 Statement: FOR Var . ASSIGN NUMBER SEMICOLON Bool-Expr SEMICOLON Var ASSIGN Expression BEGINLOOP Statements ENDLOOP

    ASSIGN  shift, and go to state 96


State 65

   58 Var: Ident L_SQUARE_BRACKET . Expression R_SQUARE_BRACKET

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 43
    SUB      shift, and go to state 44

    Ident                go to state 45
    Expression           go to state 97
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Var                  go to state 49


State 66

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY .

    $default  reduce using rule 3 (Function)


State 67

   11 Statements: Statement SEMICOLON . Statements
   12           | Statement SEMICOLON .

    IDENT     shift, and go to state 4
    RETURN    shift, and go to state 29
    IF        shift, and go to state 30
    CONTINUE  shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    DO        shift, and go to state 34
    WHILE     shift, and go to state 35
    FOR       shift, and go to state 36

    $default  reduce using rule 12 (Statements)

    Ident       go to state 37
    Statements  go to state 98
    Statement   go to state 39
    Var         go to state 40


State 68

   13 Statement: Var ASSIGN . Expression

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 43
    SUB      shift, and go to state 44

    Ident                go to state 45
    Expression           go to state 99
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Var                  go to state 49


State 69

    7 Declaration: Idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 7 (Declaration)


State 70

   51 Term: L_PAREN Expression . R_PAREN

    R_PAREN  shift, and go to state 100


State 71

   47 Term: SUB NUMBER .

    $default  reduce using rule 47 (Term)


State 72

   48 Term: SUB L_PAREN . Expression R_PAREN

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 43
    SUB      shift, and go to state 44

    Ident                go to state 45
    Expression           go to state 101
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Var                  go to state 49


State 73

   46 Term: SUB Var .

    $default  reduce using rule 46 (Term)


State 74

   52 Term: Ident L_PAREN . Expressions R_PAREN

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 43
    SUB      shift, and go to state 44

    Ident                go to state 45
    Expression           go to state 102
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Expressions          go to state 103
    Var                  go to state 49


State 75

   39 Expression: Multiplicative-Expr ADD . Expression

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 43
    SUB      shift, and go to state 44

    Ident                go to state 45
    Expression           go to state 104
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Var                  go to state 49


State 76

   40 Expression: Multiplicative-Expr SUB . Expression

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 43
    SUB      shift, and go to state 44

    Ident                go to state 45
    Expression           go to state 105
    Multiplicative-Expr  go to state 47
    Term                 go to state 48
    Var                  go to state 49


State 77

   42 Multiplicative-Expr: Term MULT . Multiplicative-Expr

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 43
    SUB      shift, and go to state 44

    Ident                go to state 45
    Multiplicative-Expr  go to state 106
    Term                 go to state 48
    Var                  go to state 49


State 78

   43 Multiplicative-Expr: Term DIV . Multiplicative-Expr

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 43
    SUB      shift, and go to state 44

    Ident                go to state 45
    Multiplicative-Expr  go to state 107
    Term                 go to state 48
    Var                  go to state 49


State 79

   44 Multiplicative-Expr: Term MOD . Multiplicative-Expr

    NUMBER   shift, and go to state 42
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 43
    SUB      shift, and go to state 44

    Ident                go to state 45
    Multiplicative-Expr  go to state 108
    Term                 go to state 48
    Var                  go to state 49


State 80

   32 Relation-Expr: L_PAREN Bool-Expr . R_PAREN

    R_PAREN  shift, and go to state 109


State 81

   29 Relation-Expr: Expression . Comp Expression
   51 Term: L_PAREN Expression . R_PAREN

    R_PAREN  shift, and go to state 100
    EQ       shift, and go to state 86
    NEQ      shift, and go to state 87
    LT       shift, and go to state 88
    LTE      shift, and go to state 89
    GT       shift, and go to state 90
    GTE      shift, and go to state 91

    Comp  go to state 92


State 82

   27 Relation-Expr-Inv: NOT Relation-Expr-Inv .

    $default  reduce using rule 27 (Relation-Expr-Inv)


State 83

   14 Statement: IF Bool-Expr THEN . Statements ENDIF
   15          | IF Bool-Expr THEN . Statements ELSE Statements ENDIF

    IDENT     shift, and go to state 4
    RETURN    shift, and go to state 29
    IF        shift, and go to state 30
    CONTINUE  shift, and go to state 31
    READ      shift, and go to state 32
    WRITE     shift, and go to state 33
    DO        shift, and go to state 34
    WHILE     shift, and go to state 35
    FOR       shift, and go to state 36

    Ident       go to state 37
    Statements  go to state 110
    Statement   go to state 39
    Var         go to state 40


State 84

   23 Bool-Expr: Relation-And-Expr OR . Bool-Expr
